k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: website-deployment-57ddb9ddf6-tsgnf
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
