k3s/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-website
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fatihayd.in
    secretName: fatih-tls
  rules:
  - host: fatihayd.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-svc
            port:
              number: 80
